İmplementation of 2 step verification(with sending code to email)

--- a/Jabiss.Web/appsettings.json
+++ b/Jabiss.Web/appsettings.json
@@ -2,6 +2,15 @@
   "ConnectionStrings": {
     "Default": "Server=DESKTOP-BEJ8I6E;Database=Jabiss_DB;Trusted_Connection=True;TrustServerCertificate=True"
   },
+  "SmtpSettings": {
+    "Host": "smtp.gmail.com",
+    "Port": 587,
+    "EnableSsl": true,
+    "UserName": "cabiyevcavad@gmail.com",
+    "Password": "liex vpcd ixyl qekc",
+    "FromAddress": "cabiyevcavad@gmail.com",
+    "FromName": "Jabiss"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
