Implement 2 step verification on signUp

--- a/Jabiss.Web/appsettings.json
+++ b/Jabiss.Web/appsettings.json
@@ -6,9 +6,9 @@
     "Host": "smtp.gmail.com",
     "Port": 587,
     "EnableSsl": true,
-    "UserName": "cabiyevcavad@gmail.com",
-    "Password": "liex vpcd ixyl qekc",
-    "FromAddress": "cabiyevcavad@gmail.com",
+    "User": "Your_email",
+    "Password": "Your_password",
+    "FromAddress": "Your_email",
     "FromName": "Jabiss"
   },
   "Logging": {
